<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tasks">

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.notedapp.ui.tasks.TasksFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_tags"
        android:name="com.example.notedapp.ui.tags.TagsFragment"
        android:label="@string/menu_tags"
        tools:layout="@layout/fragment_tags" />

    <fragment
        android:id="@+id/nav_diary"
        android:name="com.example.notedapp.ui.diary.DiaryFragment"
        android:label="@string/menu_diary"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.notedapp.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.notedapp.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />
</navigation>