<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_default"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasks.EditTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/transparent"
        android:theme="@style/Theme.NotedApp.AppBarOverlay"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/Theme.NotedApp.PopupOverlay"
                app:title="edit task" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activity_tag_bg"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_main"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:buttonTint="?colorPrimary"
                android:minWidth="0dp"
                android:minHeight="50dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:layout_constraintBottom_toBottomOf="@+id/taskName"
                app:layout_constraintEnd_toStartOf="@+id/taskName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/taskName" />

            <EditText
                android:id="@+id/taskName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/task_name"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minHeight="60dp"
                android:padding="16dp"
                android:scrollHorizontally="false"
                android:textColor="?colorOnBackground"
                android:textCursorDrawable="@null"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/checkbox"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/tags_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskName"
                tools:itemCount="2"
                tools:listitem="@layout/tags_card_layout" />

            <Spinner
                android:id="@+id/tags_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <Button
                android:id="@+id/date_picker_BTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/transparent"
                android:text="@string/set_due_date"
                android:textAlignment="viewStart"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                app:icon="@drawable/ic_baseline_edit_calendar_24"
                app:iconPadding="20dp"
                app:iconTint="?colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/time_picker_BTN"
                app:layout_constraintEnd_toStartOf="@+id/removeDueDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tags_spinner" />

            <Button
                android:id="@+id/time_picker_BTN"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/set_due_time"
                android:textAlignment="viewStart"
                android:textColor="?colorPrimary"
                android:textSize="16sp"
                app:icon="@drawable/ic_baseline_access_time_24"
                app:iconPadding="20dp"
                app:iconTint="?colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/taskDescription"
                app:layout_constraintEnd_toStartOf="@id/removeDueTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_picker_BTN" />

            <EditText
                android:id="@+id/taskDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/task_description"
                android:inputType="textMultiLine"
                android:minHeight="50dp"
                android:padding="8dp"
                android:textCursorDrawable="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_picker_BTN" />

            <Button
                android:id="@+id/removeDueDate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/transparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:icon="@drawable/ic_baseline_close_24"
                app:iconPadding="0dp"
                app:iconTint="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/date_picker_BTN"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/date_picker_BTN" />

            <Button
                android:id="@+id/removeDueTime"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@color/transparent"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:icon="@drawable/ic_baseline_close_24"
                app:iconPadding="0dp"
                app:iconTint="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/time_picker_BTN"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/time_picker_BTN" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:src="@drawable/ic_baseline_check_24"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>